# X-LINUX-GNSS1

./: README.md
X-LINUX-GNSS1_V1.0.0/: Readme.txt
X-LINUX-GNSS1_V1.0.0/Application/Binaries/: gnss_app  gnss_i2c_read  gnss_uart_read  stm32mp157f-dk2.dtb
X-LINUX-GNSS1_V1.0.0/Documentation/: ~$tting started with X-LINUX-GNSS1 package for developing GNSS Applications on Linux.docx
X-LINUX-GNSS1_V1.0.0/Recipe/Devicetree/: gnss.patch
X-LINUX-GNSS1_V1.0.0/Recipe/meta-st/: layer.conf
X-LINUX-GNSS1_V1.0.0/STM32MP1-DK2_Device_Tree/Source/: stm32mp157f-dk2.dts
X-LINUX-GNSS1_V1.1.0/: LICENSE.md  Package_license.html  Package_license.md
X-LINUX-GNSS1_V1.1.0/Application/Binaries/: gnss_app_115200  gnss_app_9600  gnss_uart_read_115200  stm32mp157f-dk2.dtb
X-LINUX-GNSS1_V1.1.0/Application/Source/gnss_x_linux/Sources/: CMakeLists.txt
X-LINUX-GNSS1_V1.1.0/Application/Source/gnss_x_linux/Sources/Drivers/BSP/GNSS1A1/: gnss1a1_gnss.c  gnss1a1_gnss.h
X-LINUX-GNSS1_V1.1.0/Application/Source/gnss_x_linux/Sources/Inc/: app_gnss.h  gnss1a1_conf.h  gnss_feature_cfg_data.h  gnss_lib_config.h  gnss_utils.h  main.h  teseo_liv3f_conf.h
X-LINUX-GNSS1_V1.1.0/Application/Source/gnss_x_linux/Sources/Src/: app_gnss.c  gnss_lib_config.c  gnss_utils.c  main.c
X-LINUX-GNSS1_V1.1.0/Application/Source/gnss_x_linux/Sources/cloud/: cloud_comm_common.h  cloud_comm_config.c  cloud_comm_config.h  cloud_comm_https.c  cloud_comm_https.h  cloud_helper.c  creds.conf  gps_parser.h
X-LINUX-GNSS1_V1.1.0/Recipe/: readme.md
X-LINUX-GNSS_V1.0.0/Application/Binaries/: gnss_app  gnss_i2c_read
X-LINUX-GNSS_V1.0.0/Documentation/: X-LINUX-GNSS1A1-DataBrief.docx
X-LINUX-GNSS_V1.0.0/Recipe/: Readme.txt  meta-gnss.tar.xz
X-LINUX-GNSS_V1.0.0/Recipe/meta-gnss/: README
X-LINUX-GNSS_V1.0.0/Recipe/meta-x-linux-gnss/: README
X-LINUX-GNSS_V1.0.0/STM32MP1-DK2_Device_Tree/: Readme.txt
X-LINUX-GNSS_V1.0.0/STM32MP1-DK2_Device_Tree/Binaries/: Readme.txt  (+2 more)
(+64 files in other folders)
